fix title bar spacing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,16 @@
 .menu{
-    padding-left: 6px;
-    padding-right: 6px;
+    padding: 0 14px;
     min-width: 60px;
 }
 .menu img{
     filter: contrast(4) invert(1);
+    height: 24px;
 }
+/*
+.right {
+    margin-right: 30px;
+}
+*/
 .title {
     padding-left: 6px;
     padding-right: 6px;
@@ -16,14 +21,7 @@
     padding-bottom: 6px;
 }
 .filler {
-    flex-grow: 1;
-}
-.add-button {
-  vertical-align: top; margin: 26px 0px 26px 175px; 
-}
-.add-button img {
-  filter: contrast(4) invert(1);
-  height: 24px;
+    flex: 1 1 auto;
 }
 .version {
     font-size: 12px;
